Express TS issue on Run
